Changed to margin instead of list position in order to avoid text wrapping from the bullet point

--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -1502,7 +1502,7 @@ width:auto;
 
 .system_notice ul,
 .instructions ul {
-list-style-position:inside;
+margin-left:1em;
 }
 .instructions p,
 .instructions ul {
